feat: add object mapper for project